# vulkan-engine

./: Cargo.toml  README.md  rustfmt.toml
models/: viking_room.glb
src/: camera.rs  debug.rs  fps_counter.rs  input.rs  main.rs  renderer.rs  state.rs  vulkan_state.rs
src/shaders/: compile.sh  fragment.slang  light_fragment.slang  light_vertex.slang  vertex.slang
src/vulkan/: adapter.rs  buffer.rs  command_buffer.rs  debug.rs  descriptor.rs  device.rs  image.rs  instance.rs  mod.rs  pipeline.rs  render_pass.rs  surface.rs  swapchain.rs
