[package]
name = "vulkan-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
env_logger = "0.11.8"
glam = "0.30.4"
gltf = "1.4.1"
image = "0.25.6"
log = "0.4.27"
raw-window-handle = "0.6.2"
winit = "0.30.11"

#[profile.release]
#lto = true
#codegen-units = 1
#opt-level = "s"
#strip = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = "symbols"
